# xatu-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config-minimal.yaml  config.example.yaml  docker-compose.yaml  go.mod  go.sum  proxy-config.example.yaml  proxy-config.yaml
.github/workflows/: eval.yaml
cmd/mcp/: main.go
cmd/proxy/: main.go
cmd/xatu-mcp/: main.go
deploy/kind/: e2e_test.py  integration_test.py  kind-config.yaml  kustomization.yaml  rbac.yaml  resourcequota.yaml  setup.sh  teardown.sh  test-configmap.yaml  test-deployment.yaml  test-secret.yaml  test.sh
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml.example  service.yaml
docs/: deployments.md
internal/version/: version.go
pkg/auth/: auth.go  auth_simple.go  errors.go
pkg/clickhouse/: clickhouse.go  cluster.go
runbooks/: slow_query.md
sandbox/: Dockerfile  requirements.txt
sandbox/ethpandaops/: pyproject.toml
sandbox/ethpandaops/ethpandaops/: __init__.py  storage.py
tests/eval/: .env.example  .gitignore  README.md  conftest.py  docker-compose.langfuse.yaml  pyproject.toml  pytest.ini
tests/eval/agent/: __init__.py  wrapper.py
tests/eval/cases/: __init__.py  basic_queries.yaml  loader.py  multi_step.yaml  visualizations.yaml
tests/eval/config/: __init__.py  defaults.yaml  evaluator.py  settings.py
tests/eval/metrics/: __init__.py  data_quality.py  datasource.py  resource_discovery.py  visualization.py
tests/eval/scripts/: __init__.py  generate_report.py  langfuse.py  repl.py  run_eval.py
tests/eval/tests/: __init__.py  test_basic_queries.py  test_multi_step.py  test_visualizations.py
(+110 files in other folders)
