[project]
name = "ethpandaops"
version = "0.1.0"
description = "ethpandaops data access library for MCP sandbox"
requires-python = ">=3.11"

dependencies = [
    "clickhouse-connect>=0.7.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ethpandaops"]
